--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2657,107 +2657,108 @@ stories:
   domain: http://www.roanoke.com/
   link: https://www.roanoke.com/news/virginia/wire/caseworker-accused-of-beating-client-pleads-not-guilty/article_06067996-a214-5b6c-88f8-38c289cfa2d4.html
 images:
-- name: adam-smith-adam-smith-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
-- name: old-barn-old-barn-1500-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-graham-sutherland.jpg
-- name: trucksilo-trucksilo-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-hot-spicy.jpg
-- name: oldhouse-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
-- name: death-valley-death-valley-national-park-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dry-skin.jpg
-- name: old-door-lock-old-door-lock-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alien-goggles.jpg
-- name: border-fence-border-fence-on-hill-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-two.jpg
-- name: blossombar-crafty-painting-file-00-00-50-52.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-52.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-- name: crow_hot_spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_hot_spicy.jpg
-- name: machine-road-machine-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
-- name: machine-road-machine-road-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alberto-giacometti.jpg
-- name: stories-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-copper-circuit.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-- name: abandonedbuildings_neo_instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_neo_instinct.jpg
-- name: oldhousecars-house-old-cars-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-- name: crow_nazi_poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_nazi_poster.jpg
-- name: containership-containership-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-asteroids.jpg
-- name: server-cloud-server-racks-door-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
-- name: oldhousecars-house-old-cars-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smoking-cigarette.jpg
-- name: old-granary-field-granaryfield-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
-- name: blossombar-bright-sand-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-24-99.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: catacombs-catacombs-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
-- name: powerlines-power-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-oily-mcoilface.jpg
-- name: catacombs-catacombs-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit.jpg
-- name: old-house-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-rainbow-festival.jpg
-- name: window-window-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dry-skin.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
-- name: legal-statue-legalstatue-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kandinsky-bv.jpg
-- name: server-racks-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds.jpg
-- name: old-barn-old-barn-1500-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-rain.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: old-door-lock-old-door-lock-2-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-deep-connections.jpg
-- name: old-school-house-old-schoolhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-clean-view.jpg
-- name: oldcabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: status-berlin-status-berlin-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-creativity.jpg
-- name: wind-mills-windmills-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-circuit.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-- name: window-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
-- name: downtown-fredericksburg-kand-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-kand-two.JPG
-- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-- name: birdhouse-birdhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-rainbow-festival.jpg
-- name: adam-smith-adam-smith-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
-- name: power-lines-power-lines-empty-space-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-4.jpg
-- name: miamibeach-miamibeach-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-post-modern.jpg
-- name: old-granary-field-granaryfield-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-soul.jpg
-- name: flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-deep-connections.jpg
+- name: old-house-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-hot-spicy.jpg
+- name: stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+- name: san-francisco-skyline-night-san-francisco-skyline-night-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-yellow-collage.jpg
+- name: machine-road-machine-road-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-emily-carr.jpg
+- name: death-valley-death-valley-national-park-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-yellow-collage.jpg
+- name: meadowbutterfly-meadow-butterfly-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-clean-view.jpg
+- name: dragon-desert-desert-dragon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dry-skin.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
+- name: castle-wall-DSC-0067-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-two.JPG
+- name: eduardo-eduardo-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alberto-giacometti.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: curtain-curtain-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-aqua.jpg
+- name: meadowbutterfly-meadow-butterfly-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-matrix.jpg
+- name: adam-smith-adam-smith-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+- name: paris-paris-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-emily-carr.jpg
+- name: oldsmallboat-oldsmallboat-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-collage.jpg
+- name: art-albert-giacometti-Isaku Yanaihara.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-albert-giacometti-Isaku
+    Yanaihara.jpg
+- name: christianity-christianity-under-construction-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-free-woman.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+- name: oldcabin-oldcabin-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alberto-giacometti.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colored-circuits.jpg
+- name: flower-barbed-wire-flower-barbed-wire-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-aqua.jpg
+- name: rain-princess-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0048.jpg
+- name: fence-fence-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-kandinsky-bv.jpg
+- name: oldcabin-store-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-hot-spicy.jpg
+- name: razorwire-DSC-0080-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-internet-numbers.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+- name: aws-s3-stories-statue-face-open-mouth-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-copper-circuit.png
+- name: server-cloud-server-racks-door-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
+- name: downtown-trucksilo-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-clean-view.jpg
+- name: san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+- name: amusement-park-amusement-park-2-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
+- name: ellis-island-ellis-island-room-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-collage.jpg
+- name: birdhouse-birdhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-color.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
+- name: nyc-flag-nycflag-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-color.jpg
+- name: old-granary-field-granaryfield-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
+- name: server-cloud-server-racks-door-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
+- name: ellis-island-ellis-island-room-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sand-paper.jpg
+- name: old-granary-field-oldhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-graham-sutherland.jpg
+- name: nyc-flag-nycflag-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-soul.jpg
+- name: death-valley-death-valley-national-park-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
+- name: crow-crow-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-sand-paper.jpg
+- name: udnie-IMG_4425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4425.jpg
+- name: cargo-ship-cargo-ship-on-sea-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crunch-paper.jpg
 ---
 Orozco And Driffin Join Pinnacle Financial Partners.&nbsp;Tips To Build Good Credit During And After College.&nbsp;David Beckham Scores Soccer Stadium Deal In Fort Lauderdale.&nbsp;Few Sockeye Are Returning To Idaho.&nbsp;Kristen Schaal Joins Bill And Ted Face The Music.&nbsp;Local Attorney Discusses Border Crisis.&nbsp;Bethany Independence Day Parade Festivities.&nbsp;Plano Gets Its First Major Film Fest In September With The North Texas Film Festival.&nbsp;
